[package]
name = "sds011_rust_driver"
version = "0.1.0"
authors = ["Vadim Manaenko <vadim.razorq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robonomics-protocol = { git = "https://github.com/airalab/robonomics", rev = "408b99d68f69b61a16644a081ad77daabfd80618" }
sp-core = "2.0.0-alpha.5"
clap = "2.33.0"
async-std = { version = "1.5" }

